# ecommerce-ai-assistant

./: .gitignore  debug_traces.json  package.json  pyproject.toml
agent_sdk/: agent_config.py  agent_config_module.py  dynamic_instructions.py  event_types.py  extract_json.py  guardrail_check.py  handoff_custom_func.py  handoff_litellm.py  handoff_open_router.py  joke.py  joker.py  local_tracing_code.py  new.py  openrouter_config.py  pydantic_check.py  test_code.py  tool_check.py  tracing_config.py  tracing_examples.py  tracing_git_code.py
backend/: db.py  generate_id.py  main.py  models.py  sanity_client.py  settings.py  supabase_client.py
frontend/: app.py
sanity_studio/ecommerceaiassistant/: package-lock.json  package.json  sanity.cli.ts  sanity.config.ts  sanity.json
sanity_studio/ecommerceaiassistant/schemaTypes/: category.ts  contentBlock.ts  homepageSection.ts  index.ts  product.ts  promo.ts
src/ecommerce_ai_assistant/: __init__.py
